deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-qe-dashboard
  labels:
    app.kubernetes.io/part-of: ai-qe
spec:
  selector:
    app.kubernetes.io/name: ai-qe
  ports:
    - name: ui
      port: 4999
      targetPort: ui
---
apiVersion: v1
kind: Service
metadata:
  name: ai-qe-receiver
  labels:
    app.kubernetes.io/part-of: ai-qe
spec:
  selector:
    app.kubernetes.io/name: ai-qe
  ports:
    - name: hook
      port: 4998
      targetPort: hook
